src/snapshots/gitu__tests__help_menu.snap
---
source: src/lib.rs
expression: "redact_hashes(terminal, dir)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 20 },
    content: [
        "🢒No branch                                                  ",
        "                                                            ",
        " Recent commits                                             ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "────────────────────────────────────────────────────────────",
        "Help                 Submenu                                ",
        "g Refresh            h Help                                 ",
        "tab ToggleSection    b Branch                               ",
        "k SelectPrevious     c Commit                               ",
        "p SelectPrevious     f Fetch                                ",
        "↑ SelectPrevious     l Log                                  ",
        "j SelectNext         F Pull                                 ",
        "n SelectNext         P Push                                 ",
        "↓ SelectNext         r Rebase                               ",
        "C-u HalfPageUp       K Discard                              ",
        "C-d HalfPageDown                                            ",
        "y ShowRefs                                                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Rgb(216, 166, 87), bg: Rgb(80, 73, 69), underline: Reset, modifier: BOLD,
        x: 10, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Rgb(80, 73, 69), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Rgb(125, 174, 163), bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 8, fg: Rgb(125, 174, 163), bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 9, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 10, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 11, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 12, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 13, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 14, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 15, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 16, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 17, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Rgb(211, 134, 155), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
