src/snapshots/gitu__tests__integration-2.snap
---
source: src/main.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 5 },
    content: [
        "                                        ",
        "Recent commits                          ",
        "                                        ",
        "                                        ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Yellow, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 14, y: 1, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
