src/snapshots/gitu__tests__integration-3.snap
---
source: src/main.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 5 },
    content: [
        "                                        ",
        "Untracked files                         ",
        "new-file                                ",
        "                                        ",
        "Recent commits                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(216, 166, 87), bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(234, 105, 98), bg: Rgb(42, 40, 39), underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Rgb(42, 40, 39), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
