src/snapshots/gitu__tests__log.snap
---
source: src/lib.rs
expression: "redact_hashes(terminal, &state.repo)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 20 },
    content: [
        "🢒_______ main add secondfile                                ",
        " _______ add firstfile                                      ",
        " _______ origin/main add initial-file                       ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Rgb(216, 166, 87), bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 9, y: 0, fg: Rgb(169, 182, 101), bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 13, y: 0, fg: Reset, bg: Rgb(80, 73, 69), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(216, 166, 87), bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 2, fg: Rgb(234, 105, 98), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
